--- a/src/main/resources/CSS/style.css
+++ b/src/main/resources/CSS/style.css
@@ -4,7 +4,7 @@
 }
 .anchor-data{
     -fx-background-color: #937fbc;
-    -fx-background-radius: 5px;
+    -fx-background-radius: 0 15px 0 15px;
 }
 .title-label{
     -fx-font-size: 20px;
@@ -12,6 +12,7 @@
 .button{
     -fx-background-color: #bd8bc0;
     -fx-text-fill: white;
+    -fx-background-radius: 0 15px 0 15px;
 }
 .button:hover{
     -fx-background-color: transparent;
